feat: 新增旋转绕过与方块挖掘瞄准系统及向量/AABB基础设施
- 新增 PlayerRotManaging 旋转限速平滑，mixin 拦截 sendPosition 伪造旋转发包
- 新增 BlockBreakingBypassMethod 挖掘可达性判定，BlockBreaking 接入并自动瞄准
- 新增 Bypassing 配置及三语本地化
- 新增 EnumArrayOptionListConfig 枚举下拉配置
- 新增 Vector2d/2f/3d/3fEx 向量扩展类（额外方法、与Minecraft数据的兼容）
- MathUtils 新增 modToCenter、rotDistanceSquared、旋转转换等工具
- MutableAABB 新增 rayCastDistance、closestToEdge
- DataUtils 新增 closestHitResult