@@ -1,12 +1,16 @@
 package lpctools.util.data.minecraft;
 
+import net.minecraft.core.BlockPos;
 import net.minecraft.core.Vec3i;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
-import org.apache.commons.lang3.mutable.MutableDouble;
 import org.joml.Vector3d;
+import org.joml.Vector3dc;
 import org.joml.Vector3f;
-import org.jspecify.annotations.Nullable;
+
+import java.util.OptionalDouble;
+
+import static lpctools.util.MathUtils.unorderedClamp;
 
 @SuppressWarnings("unused")
 public class MutableAABB {
@@ -48,6 +52,7 @@ public class MutableAABB {
 	public MutableAABB moveAndSet(Vector3d shift) { return moveAndSet(shift.x(), shift.y(), shift.z()); }
 	public MutableAABB moveAndSet(Vector3f shift) { return moveAndSet(shift.x(), shift.y(), shift.z()); }
 	public MutableAABB moveAndSet(Vec3i shift) { return moveAndSet(shift.getX(), shift.getY(), shift.getZ()); }
+	public MutableAABB setFullCube(BlockPos pos) { return set(pos.getX(), pos.getY(), pos.getZ(), pos.getX() + 1, pos.getY() + 1, pos.getZ() + 1); }
 	public Vector3d getCenter(Vector3d res) { return res.set((x1 + x2) * 0.5, (y1 + y2) * 0.5, (z1 + z2) * 0.5); }
 	public Vec3 getCenter() { return new Vec3((x1 + x2) * 0.5, (y1 + y2) * 0.5, (z1 + z2) * 0.5); }
 	private static boolean intersects(double ax1, double ax2, double bx1, double bx2) {
@@ -89,50 +94,71 @@ public class MutableAABB {
 	public MutableAABB setBottomCenter(Vec3 center) { return setBottomCenter(center.x, center.y, center.z); }
 	public MutableAABB setBottomCenter(Vector3d center) { return setBottomCenter(center.x, center.y, center.z); }
 
-	// 返回值表示是否相交，若相交且resultStorage非null时表示交点乘数（可正可负，eye+resultStorage*ray=交点坐标，eye在AABB内部时为0）
-	public boolean rayCastTest(double eyeX, double eyeY, double eyeZ, double rayX, double rayY, double rayZ, @Nullable MutableDouble resultStorage) {
+	// 返回射线与AABB的最近交点系数（eye + result * ray = 交点坐标），eye在AABB内部时返回0，不相交时返回OptionalDouble.empty()
+	public OptionalDouble rayCastDistance(double eyeX, double eyeY, double eyeZ, double rayX, double rayY, double rayZ) {
 		// Slab method: 对每个轴计算近远交点，取最近交点的最大值和最远交点的最小值
-		double tNear = Double.NEGATIVE_INFINITY;
-		double tFar = Double.POSITIVE_INFINITY;
-		// X 轴
-		if(rayX != 0) {
-			double tx1 = (x1 - eyeX) / rayX;
-			double tx2 = (x2 - eyeX) / rayX;
-			tNear = Math.max(tNear, Math.min(tx1, tx2));
-			tFar  = Math.min(tFar,  Math.max(tx1, tx2));
-		} else if(touches(eyeX, x1, x2)) {
-			return false;
-		}
-		// Y 轴
-		if(rayY != 0) {
-			double ty1 = (y1 - eyeY) / rayY;
-			double ty2 = (y2 - eyeY) / rayY;
-			tNear = Math.max(tNear, Math.min(ty1, ty2));
-			tFar  = Math.min(tFar,  Math.max(ty1, ty2));
-		} else if(touches(eyeY, y1, y2)) {
-			return false;
-		}
-		// Z 轴
-		if(rayZ != 0) {
-			double tz1 = (z1 - eyeZ) / rayZ;
-			double tz2 = (z2 - eyeZ) / rayZ;
-			tNear = Math.max(tNear, Math.min(tz1, tz2));
-			tFar  = Math.min(tFar,  Math.max(tz1, tz2));
-		} else if(touches(eyeZ, z1, z2)) {
-			return false;
-		}
-		if(tNear <= tFar) {
-			if(resultStorage != null) resultStorage.setValue(Math.clamp(0, tNear, tFar));
+		double[] tnf = {Double.NEGATIVE_INFINITY, Double.POSITIVE_INFINITY};
+		if (slabAxis(tnf, eyeX, rayX, x1, x2) && slabAxis(tnf, eyeY, rayY, y1, y2) && slabAxis(tnf, eyeZ, rayZ, z1, z2) && tnf[0] <= tnf[1])
+			return OptionalDouble.of(Math.clamp(0, tnf[0], tnf[1]));
+		else return OptionalDouble.empty();
+	}
+
+	// 对单个轴更新 tNearFar[0]=tNear, tNearFar[1]=tFar；返回 false 表示射线与该轴平行且不相交
+	private static boolean slabAxis(double[] tnf, double eye, double ray, double aabb1, double aabb2) {
+		if(ray != 0) {
+			double t1 = (aabb1 - eye) / ray;
+			double t2 = (aabb2 - eye) / ray;
+			if(t1 < t2) {
+				if(tnf[0] < t1) tnf[0] = t1;
+				if(tnf[1] > t2) tnf[1] = t2;
+			} else {
+				if(tnf[0] < t2) tnf[0] = t2;
+				if(tnf[1] > t1) tnf[1] = t1;
+			}
 			return true;
 		}
-		return false;
+		return touches(eye, aabb1, aabb2);
 	}
 
-	public boolean rayCastTest(Vec3 eye, Vec3 ray, @Nullable MutableDouble resultStorage) {
-		return rayCastTest(eye.x, eye.y, eye.z, ray.x, ray.y, ray.z, resultStorage);
+	public OptionalDouble rayCastDistance(Vec3 eye, Vec3 ray) {
+		return rayCastDistance(eye.x, eye.y, eye.z, ray.x, ray.y, ray.z);
 	}
 
-	public boolean rayCastTest(Vector3d eye, Vec3 ray, @Nullable MutableDouble resultStorage) {
-		return rayCastTest(eye.x, eye.y, eye.z, ray.x, ray.y, ray.z, resultStorage);
+	public OptionalDouble rayCastDistance(Vector3d eye, Vec3 ray) {
+		return rayCastDistance(eye.x, eye.y, eye.z, ray.x, ray.y, ray.z);
 	}
+
+	public <T extends Vector3d> T clamp(Vector3dc vec, T res) {
+		res.set(unorderedClamp(vec.x(), x1, x2), unorderedClamp(vec.y(), y1, y2), unorderedClamp(vec.z(), z1, z2));
+		return res;
+	}
+
+	public <T extends Vector3d> T clamp(T vec) { return clamp(vec, vec); }
+
+	public <T extends Vector3d> T closestToEdge(Vector3dc vec, T res) {
+		double x = vec.x(), y = vec.y(), z = vec.z();
+		double cx = unorderedClamp(x, x1, x2);
+		double cy = unorderedClamp(y, y1, y2);
+		double cz = unorderedClamp(z, z1, z2);
+		if(x == cx && y == cy && z == cz) {
+			// 点在 AABB 内部：投影到最近的面（最近的一面墙）
+			double loX = Math.min(x1, x2), hiX = Math.max(x1, x2);
+			double loY = Math.min(y1, y2), hiY = Math.max(y1, y2);
+			double loZ = Math.min(z1, z2), hiZ = Math.max(z1, z2);
+			double dX1 = x - loX, dX2 = hiX - x;
+			double dY1 = y - loY, dY2 = hiY - y;
+			double dZ1 = z - loZ, dZ2 = hiZ - z;
+			double min = Math.min(Math.min(dX1, dX2), Math.min(Math.min(dY1, dY2), Math.min(dZ1, dZ2)));
+			if(min == dX1) cx = loX;
+			else if(min == dX2) cx = hiX;
+			else if(min == dY1) cy = loY;
+			else if(min == dY2) cy = hiY;
+			else if(min == dZ1) cz = loZ;
+			else cz = hiZ;
+		}
+		res.set(cx, cy, cz);
+		return res;
+	}
+
+	public <T extends Vector3d> T closestToEdge(T vec) { return closestToEdge(vec, vec); }
 }
